<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts Manager</string>
    <string name="hello_world">Display all existing contacts here.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_contact">Add Contact</string>
    <string name="title_activity_add_contact">AddContact</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint">Last Name</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="emailAddressHint">Email Address</string>
    <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
    <string name="title_activity_Modify_contact">Edit Contact</string>
    <string name="check_delete">Are you sure you want to Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_contact">edit</string>
    <string name="delete_contact">Delete</string>
    <string name="title_activity_show_contact">Contact</string>
              

</resources>
