<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.contactmanager.ModifyContact" >

    <TextView
        android:id="@+id/firstNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/firstNameHint"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/firstNameHint" />

    <TextView
        android:id="@+id/lastNameLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/firstName"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/lastNameHint"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastNameHint" />

    <TextView
        android:id="@+id/emailAddressLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/emailAddressHint"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/emailAddressHint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/phoneNumberLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="15dp"
        android:text="@string/phoneNumberHint"
        android:textSize="16dp"
        android:textStyle="bold" />

    
    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phoneNumberHint"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:layout_marginTop="50dp"
        android:layout_weight="0.01"
        android:background="@drawable/colors"
        android:onClick="saveContact"
        android:text="@string/button_save"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="normal"
        android:typeface="serif" />

   
     
</LinearLayout>

</ScrollView>
